## Process this file with automake to produce Makefile.in

# Makefile for m4 directory of CSV source distribution.

# Copyright (C) 2003
#               Derek R. Price, Ximbiot <http://ximbiot.com>,
#               and the Free Software Foundation, Inc.

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

EXTRA_DIST = \
	cvs_func_printf_ptr.m4 \
	acx_with_gssapi.m4 \
	lstat.m4 \
	malloc.m4 \
	stat.m4
