## Process this file with automake to produce Makefile.in

# Makefile for m4 directory of CSV source distribution.

# Copyright (C) 2003
#               Derek R. Price, Ximbiot <http://ximbiot.com>,
#               and the Free Software Foundation, Inc.

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# The first five files (through cvs_func_printf_ptr.m4) are NOT imported
# from GNULIB.
EXTRA_DIST = \
	acx_extract_cpp_defn.m4 \
	acx_with_gssapi.m4 \
	acx_with_external_zlib.m4 \
	asx_version_compare.m4 \
	cvs_func_printf_ptr.m4 \
	alloca.m4 \
	atexit.m4 \
	bison.m4 \
	clock_time.m4 \
	codeset.m4 \
	dirname.m4 \
	dos.m4 \
	eoverflow.m4 \
	exitfail.m4 \
	extensions.m4 \
	fnmatch.m4 \
	getcwd.m4 \
	getdate.m4 \
	gethostname.m4 \
	getline.m4 \
	getnline.m4 \
	getndelim2.m4 \
	getopt.m4 \
	getpass.m4 \
	gettext.m4 \
	glibc21.m4 \
	gettime.m4 \
	gettimeofday.m4 \
	gnulib.m4 \
	iconv.m4 \
	intdiv0.m4 \
	intmax.m4 \
	intmax_t.m4 \
	inttypes_h.m4 \
	inttypes.m4 \
	inttypes-pri.m4 \
	isc-posix.m4 \
	lcmessage.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	longdouble.m4 \
	longlong.m4 \
	lstat.m4 \
	malloc.m4 \
	mbstate_t.m4 \
	memmove.m4 \
	mkstemp.m4 \
	mktime.m4 \
	nanosleep.m4 \
	nls.m4 \
	onceonly_2_57.m4 \
	pathmax.m4 \
	po.m4 \
	printf-posix.m4 \
	progtest.m4 \
	realloc.m4 \
	regex.m4 \
	restrict.m4 \
	save-cwd.m4 \
	signed.m4 \
	size_max.m4 \
	ssize_t.m4 \
	st_mtim.m4 \
	stat.m4 \
	stdbool.m4 \
	stdint_h.m4 \
	strerror.m4 \
	strerror_r.m4 \
	strftime.m4 \
	time_r.m4 \
	timespec.m4 \
	tm_gmtoff.m4 \
	tzset.m4 \
	uintmax_t.m4 \
	ulonglong.m4 \
	unlocked-io.m4 \
	vasnprintf.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xalloc.m4 \
	xgetcwd.m4 \
	xsize.m4
